fixed spacing of list and add form

--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ h1.title {
 
 .main {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 hr {
